# smart-developer

./: .env.example  .gitignore  CNAME  README.md  asset-manifest.json  docker-compose.yml  index.html  manifest.json  package-lock.json  requirements.txt  service-worker.js
algorithm/: DEPLOYMENT_HANDOFF.md  MODEL_OVERVIEW.md  demo_report.py  demo_retrieval.py  strategy_feature_mapping.md  two_tower_data_design.md
algorithm/configs/: model.yaml  strategies.yaml
algorithm/notebooks/: 01_inspect_nsw_addressing.ipynb  02_join_addressing_with_zoning.ipynb  03_join_addressing_with_heritage.ipynb  04_join_addressing_with_bushfire.ipynb  05_join_addressing_with_flood.ipynb  06_inspect_gtfs_stations.ipynb  07_link_addressing_with_property.ipynb  08_join_property_with_zoning.ipynb  09_collapse_property_zoning.ipynb  10_collapse_property_heritage.ipynb  11_collapse_property_bushfire.ipynb  12_collapse_property_flood.ipynb  (+9 more)
assets/: index-B6IvuBu8.js  index-BAPTH0ZI.js  index-C8tx35qN.css  index-CF37CklD.js  index-CTrcTsDX.js  index-CmIwM-hu.js  index-CzvMyWh4.js  index-D42vxx6E.js  index-DEjlZ8eh.css  index-WxJqX4zu.js
backend/: README.md  main.py  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/services/: algorithm_client.py
docs/: mlops_feedback_pipeline.md  model_lifecycle.md
frontend/: CNAME  index.html  package-lock.json  package.json
scripts/: demo_full_mlops_flow.sh  download_raw_data.sh  export_feedback_dataset.sh  run_demo_report.sh  run_demo_retrieval.sh  run_training.sh  start_demo_platform.sh  test_location_filter.sh
sql/: mlops_schema.sql
(+67 files in other folders)
