[project]
name = "smart-developer-backend"
version = "0.1.0"
description = "Backend gateway for Smart Developer demo platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["app"]